--- a/public/css/main.css
+++ b/public/css/main.css
@@ -162,6 +162,21 @@ nav .list_items .notifications .notif_mold a {
     border-bottom: 1px solid #b9c6d5;
 }
 
+nav .list_items .notifications .notif_mold a:hover {
+    background-color: inherit;
+    color: inherit;
+}
+
+nav .list_items .notifications .notif_mold a:hover .info {
+    transition: all .2s;
+    transform: translateX(5px);
+}
+
+nav .list_items .notifications li.not-seen {
+    text-decoration: none;
+    background-color: #f5f5f5;
+}
+
 nav .list_items .notifications .notif_mold a .icon {
     padding-top: 5px;
     color: #02b3e4;
@@ -418,6 +433,13 @@ nav .list_items .notifications .notif_mold a .info .description span.time {
 /*** Aside left style End ***/
 
 /*** Post style start ***/
+
+.content .posts article.publication_mold {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+}
 
 .main .main .welcom_day {
     padding: 10px;
@@ -1011,6 +1033,19 @@ span.separitor {
         margin-top: 75px;
     }
 
+}
+
+@media (max-width: 767px) {
+    .content .posts article.publication_mold {
+        margin-top: 80px;
+        width: 80%;
+    }
+}
+
+@media (max-width: 415px) {
+    .content .posts article.publication_mold {
+        width: 95%;
+    }
 }
 
 /* for animation jQuery*/
