--- a/public/css/main.css
+++ b/public/css/main.css
@@ -154,12 +154,25 @@ nav .items_icons .search_container .navbar-form input.form-control {
     border-right: none;
 }
 
+nav .list_items .notifications ul .see_more_notif {
+    padding-bottom: 10px
+}
+
+nav .list_items .notifications ul .see_more_notif a {
+    font-size: 14px;
+    color: #17667b;
+    text-decoration: underline;
+}
 
 nav .list_items .notifications .notif_mold a {
     padding: 10px 10px;
     display: flex;
     width: 500px;
     border-bottom: 1px solid #b9c6d5;
+}
+
+nav .list_items .notifications .notif_mold a:last-of-type {
+    border-bottom: none;
 }
 
 nav .list_items .notifications .notif_mold a:hover {
@@ -170,11 +183,6 @@ nav .list_items .notifications .notif_mold a:hover {
 nav .list_items .notifications .notif_mold a:hover .info {
     transition: all .2s;
     transform: translateX(5px);
-}
-
-nav .list_items .notifications li.not-seen {
-    text-decoration: none;
-    background-color: #f5f5f5;
 }
 
 nav .list_items .notifications .notif_mold a .icon {
@@ -928,6 +936,10 @@ span.separitor {
     text-decoration: none;
 }
 
+.main .notifications .notif_mold .header {
+    padding: 5px 10px;
+}
+
 .main .saved .saved_mold .header:hover .info {
     opacity: .75;
 }
@@ -1106,4 +1118,9 @@ span.separitor {
 .btn-transparent {
     background: transparent !important;
     border: none !important;
+}
+
+.notifications .not-seen {
+    text-decoration: none;
+    background-color: #f5f5f5 !important;
 }
