--- a/public/css/main.css
+++ b/public/css/main.css
@@ -302,6 +302,7 @@ nav .list_items .notifications .notif_mold a .info .description span.time {
     padding: 3px 0 0;
     text-align: left;
 }
+
 .aside-left .my_data .user_info > span.student_id {
     position: absolute;
     bottom: -40px;
@@ -1045,6 +1046,95 @@ span.separitor {
 }
 
 /*Notifications page End*/
+
+/*Mails page Start*/
+
+.main .mails {
+    width: 95%;
+    margin: auto;
+    padding: 10px 20px
+}
+
+.main .mails .header {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #b9c3c4;
+    padding-bottom: 10px;
+}
+
+.main .mails .header .new_message .new_message_btn {
+    background: #d91f2d;
+    color: #FFFFFF;
+    padding: 7px 10px;
+    border: 1px solid #C00;
+}
+
+.main .mails .header .filter button {
+    background: #02b3e4;
+    color: #22313F;
+    padding: 7px 10px;
+    border: 1px solid #35a8c7;
+    font-size: 13.9px;
+}
+
+.main .mails .header .filter ul {
+    background: #02b3e4;
+    color: #22313F;
+    border-radius: 0 0 4px 4px;
+}
+
+.main .mails .header .filter ul li {
+    padding: 2px 10px;
+}
+
+.main .mails .header .filter ul li:hover {
+    transition: all .2s;
+    transform: translateX(3px);
+}
+
+.main .mails .header .filter ul li > a:hover,
+.main .mails .header .filter ul li > a:focus {
+    background: initial;
+}
+
+.main .mails .body {
+    margin-top: 10px;
+}
+
+.main .mails .body tr:hover {
+    cursor: pointer
+}
+
+.main .mails .body table tr td.icon_send {
+    color: #46bfbe;
+}
+
+.main .mails .body table tr td.sender {
+    width: 20%;
+}
+
+
+.main .mails .body table tr td.content {
+    width: 68%;
+}
+
+.main .mails .body table tr td .nowrap {
+    height: 20px;
+    overflow: hidden
+}
+
+.main .mails .body table tr td {
+    border: none;
+    font-size: 15px;
+}
+
+.main .mails .body table tr td div > span.text-message {
+    border: none;
+    font-size: 14px;
+    color: #657786;
+}
+
+/*Mails page End*/
 
 /****Responsive Start****/
 
