--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1134,6 +1134,60 @@ span.separitor {
     color: #657786;
 }
 
+/*Send Message style start*/
+
+.main .mails .sendMessageModal .modal-body .input-group {
+    width: 100%;
+    border-radius: 4px;
+}
+
+.main .mails .sendMessageModal .modal-body .alert-success {
+    text-align: center;
+    padding: 15px;
+}
+
+.main .mails .sendMessageModal .modal-body > .data-message .input-group-addon {
+    width: 43px;
+}
+
+.main .mails .sendMessageModal .modal-body > .data-message > div {
+    margin-bottom: 10px;
+}
+
+.main .mails .sendMessageModal .modal-body > .data-message .to > div select {
+    width: 100%;
+    height: 34px;
+    border: 1px solid #ccc;
+    border-radius: 0 4px 4px 0;
+    padding: 6px 12px;
+    color: #a9a9a9;
+}
+
+.main .mails .sendMessageModal .modal-body > .data-message .to > div select option {
+    color: #22313F;
+}
+
+.main .mails .sendMessageModal .modal-body > .data-message .to > div select * {
+    padding: 10px;
+}
+
+.main .mails .sendMessageModal .modal-body .text-message {
+    padding: 10px 30px;
+}
+
+.main .mails .sendMessageModal .modal-body .text-message textarea {
+    resize: none;
+    width: 100%;
+    height: 300px;
+    padding: 10px;
+}
+
+.main .mails .sendMessageModal .modal-footer button#send-message-btn {
+    display: none;
+}
+
+/*Send Message style End*/
+
 /*Mails page End*/
 
 /****Responsive Start****/
