--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1154,6 +1154,48 @@ span.separitor {
     color: #657786;
 }
 
+/*show Message style start*/
+
+.main .mail_layout {
+    width: 80%;
+    margin: 50px auto;
+    padding: 10px 20px;
+    border-radius: 6px;
+    box-shadow: 0px 0px 6px 0 rgba(46, 61, 73, .2);
+    background: #FaFbFc;
+    overflow: hidden;
+}
+
+.main .mail_layout .header {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.main .mail_layout .header .user_logo {
+    padding: 5px;
+}
+
+.main .mail_layout .header .mail_detail {
+    padding: 10px;
+}
+
+.main .mail_layout .header .mail_detail .time {
+    color: #657786;
+}
+
+.main .mail_layout .body .subject_detail p,
+.main .mail_layout .body .message_text_detail p {
+    padding: 10px 20px;
+    margin-bottom: 5px;
+    color: #5f6061;
+}
+
+.main .mail_layout .body .subject_detail > h3 {
+    margin-bottom: 0px;
+}
+
+/*show Message style end*/
+
 /*Send Message style start*/
 
 .main .mails .sendMessageModal .modal-body .input-group {
