--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1130,7 +1130,7 @@ span.separitor {
 }
 
 .main .mails .body table tr td.time > div {
-    width: 60px;
+    width: 70px;
 }
 
 
@@ -1158,7 +1158,7 @@ span.separitor {
 
 .main .mail_layout {
     width: 80%;
-    margin: 50px auto;
+    margin: 65px auto;
     padding: 10px 20px;
     border-radius: 6px;
     box-shadow: 0px 0px 6px 0 rgba(46, 61, 73, .2);
@@ -1177,6 +1177,16 @@ span.separitor {
 
 .main .mail_layout .header .mail_detail {
     padding: 10px;
+}
+
+.main .mail_layout .header .mail_detail .name_sender_receiv > h3 {
+    display: inline-block;
+}
+
+.main .mail_layout .header .mail_detail .name_sender_receiv > span {
+    margin-left: 10px;
+    margin-right: 10px;
+    color: #657786;
 }
 
 .main .mail_layout .header .mail_detail .time {
@@ -1198,21 +1208,21 @@ span.separitor {
 
 /*Send Message style start*/
 
-.main .mails .sendMessageModal .modal-body .input-group {
+.sendMessageModal .modal-body .input-group {
     width: 100%;
     border-radius: 4px;
 }
 
-.main .mails .sendMessageModal .modal-body .alert-success {
+.sendMessageModal .modal-body .alert-success {
     text-align: center;
     padding: 15px;
 }
 
-.main .mails .sendMessageModal .modal-body > .data-message .input-group-addon {
+.sendMessageModal .modal-body > .data-message .input-group-addon {
     width: 43px;
 }
 
-.main .mails .sendMessageModal .modal-body > .data-message > div {
+.sendMessageModal .modal-body > .data-message > div {
     margin-bottom: 10px;
 }
 
@@ -1233,11 +1243,11 @@ span.separitor {
     padding: 10px;
 }
 
-.main .mails .sendMessageModal .modal-body .text-message {
+.sendMessageModal .modal-body .text-message {
     padding: 10px 30px;
 }
 
-.main .mails .sendMessageModal .modal-body .text-message textarea {
+.sendMessageModal .modal-body .text-message textarea {
     resize: none;
     width: 100%;
     height: 300px;
@@ -1310,6 +1320,14 @@ span.separitor {
     .content .posts article.publication_mold {
         margin-top: 80px;
         width: 80%;
+    }
+    .main .mails {
+        margin-top: 60px;
+    }
+
+    .main .mail_layout .header .mail_detail .name_sender_receiv > h3,
+    .main .mail_layout .header .mail_detail .name_sender_receiv > span i {
+        font-size: 20px;
     }
     .content article.publication_mold .course_info .module_teacher > h3 {
         white-space: nowrap;
@@ -1409,4 +1427,8 @@ textarea.autosize {
     overflow: hidden;
     resize: none;
     max-height: 240px;
+}
+
+#id_prof {
+    display: none !important;
 }
