--- a/public/css/prof_style.css
+++ b/public/css/prof_style.css
@@ -1,13 +1,17 @@
 .main .new-post {
     margin-top: -20px;
-    padding: 10px;
+    padding: 10px 0px;
 }
+
 .main .new-post form {
-    padding: 30px;
+    padding: 30px 30px 0;
 }
+
 .main .new-post form.infocus {
     margin-top: 30px;
-    background: #FFF;
+    background: #fafbfc;
+    box-shadow: 0px 0px 6px 0 rgba(46, 61, 73, .2);
+    border-radius: 6px;
     transition: all .5s ease-in-out
 }
 
@@ -15,7 +19,7 @@
     margin: 0 30px 10px;
     background: #FFF;
     border: 1px solid #ccc;
-    border-radius: 0 4px 4px 0;
+    border-radius: 6px;
     padding: 10px 12px 0px;
 }
 
@@ -30,27 +34,38 @@
     width: 100%;
     height: 34px;
     margin-bottom: 10px;
+    font-weight: bold;
     border: 1px solid #ccc;
     border-radius: 0 4px 4px 0;
     padding: 6px 12px;
-    color: #a9a9a9;
+    background: #46bfbe;
+}
+
+.main .new-post .data select option {
+    background: #fafbfc
+}
+
+.main .new-post .data select:disabled {
+    background: #348888;
 }
 
 .main .new-post .footer {
     margin: 0 30px 10px;
+    padding-bottom: 10px
 }
 
 .main .new-post .footer input.publier-btn {
-    background-color: #46bfbe;
+    background-color: #d91f2d;
     border: 1px solid;
-    border-color: #3e9c9c;
+    border-color: #ca2734;
     border-radius: 4px;
     padding: 6px 10px;
+    color: #fafbfc;
 }
 
 .main .new-post .footer input.publier-btn:hover {
-    background-color: #45adad;
-    border-color: #348888;
+    background-color: #ca2734;
+    border-color: #b2222e;
 }
 
 .main .new-post .footer,
