finishing evreything hahaha just kiding

--- a/public/css/prof_style.css
+++ b/public/css/prof_style.css
@@ -4,10 +4,7 @@
 }
 
 .main .new-post form {
-    padding: 30px 30px 0;
-}
-
-.main .new-post form.infocus {
+    padding: 20px 30px 10px;
     margin-top: 30px;
     background: #fafbfc;
     box-shadow: 0px 0px 6px 0 rgba(46, 61, 73, .2);
@@ -46,7 +43,7 @@
 }
 
 .main .new-post .data select:disabled {
-    background: #348888;
+    opacity: .8;
 }
 
 .main .new-post .footer {
