--- a/public/css/main.css
+++ b/public/css/main.css
@@ -171,6 +171,10 @@ nav .list_items .notifications ul#notif-list {
     min-width: 500px;
     min-height: 30px;
 }
+nav .list_items .mails ul#mails-nav-list {
+    min-width: 500px;
+    min-height: 30px;
+}
 
 nav .list_items .notifications .notif_mold a,
 nav .list_items .mails .mail_mold a {
