--- a/public/css/main.css
+++ b/public/css/main.css
@@ -171,6 +171,7 @@ nav .list_items .notifications ul#notif-list {
     min-width: 500px;
     min-height: 30px;
 }
+
 nav .list_items .mails ul#mails-nav-list {
     min-width: 500px;
     min-height: 30px;
@@ -241,7 +242,7 @@ nav .list_items a .info .subject span.time {
     nav .items_icons .list_items .navbar-nav .open .dropdown-menu {
         position: absolute;
         left: -320px;
-        background-color: #e7e7e7;
+        background-color: #FFF;
         min-width: 380px;
     }
 
@@ -267,16 +268,19 @@ nav .list_items a .info .subject span.time {
     }
 
     nav .items_icons .list_items .navbar-nav .open .dropdown-menu {
-        min-width: 310px;
-        left: -245px;
+        min-width: 320px !important;
+        left: -275px;
+    }
+    nav .items_icons .list_items .navbar-nav .open .dropdown-menu li > a {
+        width: auto;
     }
 
-    nav .items_icons .list_items .navbar-nav .open.messages .dropdown-menu {
-        left: -180px;
+    nav .items_icons .list_items .navbar-nav .open.mails .dropdown-menu {
+        left: -225px;
     }
 
     nav .items_icons .list_items .navbar-nav .open.notifications .dropdown-menu {
-        left: -120px;
+        left: -212px;
     }
 }
 
@@ -442,9 +446,11 @@ nav .list_items a .info .subject span.time {
     margin: 5px 0;
     font-weight: bolder;
 }
+
 .main .aside-right .ma_journee .well li div.activeTime {
     border-left: 2px solid #d91f2d;
 }
+
 .main .aside-right .ma_journee .well li div.activeTime > span {
     color: #46bfbe;
 }
@@ -1185,6 +1191,11 @@ span.separitor {
 
 .main .mail_layout .header .user_logo {
     padding: 5px;
+    color: #46bfbe;
+}
+
+.main .mail_layout .body h3 strong {
+    color: #46bfbe;
 }
 
 .main .mail_layout .header .mail_detail {
@@ -1214,6 +1225,16 @@ span.separitor {
 
 .main .mail_layout .body .subject_detail > h3 {
     margin-bottom: 0px;
+}
+
+.main .mail_layout .footer #reply-message {
+    background: #46bfbe;
+    border-color: #3fa7a6;
+}
+
+.main .mail_layout .footer #reply-message:hover {
+    background: #3fa7a6;
+    border-color: #3c9897;
 }
 
 /*show Message style end*/
